--- a/config.json
+++ b/config.json
@@ -20,10 +20,10 @@
   },
   "paths": {
     "apktool": "apktool.bat",
-    "md5sum": "md5sum.exe",
-    "dd": "dd.exe",
-    "keytool": "keytool.exe",
-    "jarsigner": "jarsigner.exe",
+    "md5sum": "C:\Program Files\Git\usr\bin\md5sum.exe",
+    "dd": "C:\Program Files\Git\usr\bin\dd.exe",
+    "keytool": "C:\Program Files\Java\jdk-13.0.1\bin\keytool.exe",
+    "jarsigner": "C:\Program Files\Java\jdk-13.0.1\bin\jarsigner.exe",
     "zipalign": "zipalign.exe"
   },
   "versions": {
